--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.3",
     "internal-ip": "^6.0.0",
+    "nestjs-pgpromise": "^1.5.1",
+    "pg-promise": "^10.11.1",
     "pm2": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
