--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mongoose": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
     "@sentry/node": "^7.4.1",
@@ -32,6 +33,7 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.3",
     "internal-ip": "^6.0.0",
+    "mongoose": "^6.4.2",
     "nestjs-pgpromise": "^1.5.1",
     "pg-promise": "^10.11.1",
     "pm2": "^5.2.0",
