--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -1,4 +1,21 @@
 {
   "name": "nest-community",
-  "script": "./dist/main.js"
+  "script": "./dist/main.js",
+  "exec_mode": "cluster",
+  "instances": "-1",
+  "max_memory_restart": "1G",
+  "node_args": [
+    "--nouse-idle-notification",
+    "--expose-gc",
+    "--max-old-space-size=8192",
+    "--stack_size=8192"
+  ],
+  "env": {
+    "NODE_ENV": "development",
+    "NODE_CONFIG_ENV": "development"
+  },
+  "env_production": {
+    "NODE_ENV": "production",
+    "NODE_CONFIG_ENV": "production"
+  }
 }
