--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,6 +64,8 @@
     "forceConsistentCasingInFileNames": false /* Disallow inconsistently-cased references to the same file. */
   },
   "exclude": [
+    "node_modules",
+    "dist",
     "docker-data"
   ],
 }
