--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.1.1",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/swagger": "^5.2.1",
+    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.0.0",
     "@sentry/node": "^7.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -33,22 +33,23 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.3",
     "internal-ip": "^6.0.0",
+    "ioredis": "^5.2.0",
     "mongoose": "^6.4.2",
     "nestjs-pgpromise": "^1.5.1",
     "pg-promise": "^10.11.1",
     "pm2": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.4.0"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
     "@types/config": "^0.0.41",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.5.0",
+    "@types/jest": "^28.1.5",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -56,11 +57,11 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.0.3",
+    "jest": "^28.0.3",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "ts-jest": "28.0.1",
+    "ts-jest": "^28.0.1",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
